build: skip unit tests in local build (run via -Pci); add run-local script
- root build.gradle.kts: the 'test' task is gated behind -Pci so a plain
  'gradle build' / ':app:bootJar' compiles and packages WITHOUT forking
  the memory-heavy test JVMs — lets a Raspberry Pi produce a runnable jar
  without swap-thrashing. integrationTest is not gated.
- ci.yml: build job runs 'gradle build -Pci' (full unit/module suite);
  integration job passes -Pci too. CI test coverage unchanged.
- scripts/run-local.sh: one command — build jar (no tests), bring up
  Redpanda+Postgres (+Ollama if AI=on), wait for health, run the app as a
  plain capped-heap JVM with the LMDB add-opens flags. Knobs: PROFILE,
  HEAP, AI, MODEL.
- scripts/stop-local.sh: docker compose down (--volumes to wipe data)
- docs/deploy/raspberry-pi.md + README: document the script and the
  tests-run-in-CI-only behavior

Verified locally: plain build SKIPs every :test; -Pci executes them;
:app:bootJar produces the fat jar; scripts pass bash -n.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GqJXPgg8rxagZMYZTnrRqo